--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ channels:
 dependencies:
   # Core
   - conda-forge::python=3.10
+  - conda-forge::numpy=1.26.4
   - conda-forge::jupyterlab
   - conda-forge::ipywidgets
   - conda-forge::dask
